hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: lab
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
